# cardano-tan

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  cabal.project  cardano-tan.cabal
.github/workflows/: ci.yml
benchmark/: Bench.hs
conifg/: network.ts
deployment/: config.json
docs/: GAME_INSTRUCTIONS.md  RECOVERY_PROEDURES.md  TECHNICAL_SPECIFICATIONS.md
scripts/: automated-deployment.sh  deploy.sh  monitor-contract.sh  verify-deployment.sh
src/: FanTan.hs
src/components/: AdminDashboard.tsx  GameInterface.tsx  WalletConnector.tsx
src/services/: AdminService.ts  AdminServices.ts  AnalyticsQueries.ts  AnalyticsService.ts  BackupRecoveryService.ts  ContractService.ts  SecurityService.ts  TransactionMonitor.ts
src/state/: GameStateManager.ts
test/: Chaos.hs  Integration.hs  Oracle.hs  Performance.hs  Property.hs  Security.hs  Spec.hs  cabal.test
